infrastructure/victoria-metrics/ingress-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: victoriametrics-route
  namespace: monitoring
spec:
  parentRefs:
    - name: public-gateway
      namespace: infra-gateway
  hostnames:
    - "vm.public.lab.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: victoriametrics-victoria-metrics-single-server
          port: 8428
